--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,16 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 *.zip
 *.tar.gz
 *.rar
+
+# Other stuff
+.settings/
+bin/
+target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
