Added Example Configurations

--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,10 @@
 .settings/
 .classpath
 .project
-bin/
-target/
-config.json
-device.dat
+/bin/
+/target/
+/config.json
+/device.dat
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
