--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,9 @@
 /config.json
 /device.dat
 
+# Idea
+.idea/
+piyoutube.iml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
